# different-stock-data

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/agents/: data-engineer.md  data-scientist.md  quant-researcher.md
data/raw/: sp500_monthly.csv
docs/: experiments.md  getting-started.md  index.md  notebooks.md  pipeline.md  strategy.md
docs/api/: config.md  dataset.md  evaluation.md  features.md  plots.md
docs/api/modeling/: predict.md  train.md
experiments/: exp_02_shrinkage_sweep.py  exp_21_ensemble_weights.py  exp_21_report.md  exp_21_results.csv  exp_32_report.md  exp_32_results.csv  exp_32_vol_model.py  exp_34_rank_ablation.py  exp_34_report.md  exp_34_results.csv  exp_71_co_optimize.py  exp_research.py  experiment_results.csv  run_experiments.py
notebooks/: getting-an-overview-backup.ipynb  getting-an-overview.ipynb
notebooks/exploratory/: 1.0-wvs-data-acquisition.ipynb  2.0-wvs-feature-engineering.ipynb
notebooks/reports/: 3.0-wvs-backtest-results.ipynb  4.0-wvs-strategy-evaluation.ipynb
site/: 404.html  index.html  objects.inv
site/api/config/: index.html
site/getting-started/: index.html
site/notebooks/: index.html
site/pipeline/: index.html
site/search/: search_index.json
site/strategy/: index.html
src/stock_data/: config.py  dataset.py  evaluation.py  features.py  plots.py
tests/: test_dataset.py  test_dataset_compute.py  test_e2e.py  test_evaluation.py  test_evaluation_integration.py  test_features.py  test_predict.py  test_train.py  test_walk_forward_integration.py
(+8 files in other folders)
