[project]
name = "stock-data"
version = "0.1.0"
description = "ML-enhanced S&P 500 quarterly stock selection strategy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "pytest>=8.0",
]
